add route for localcbc
